// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> should render Badge with Icon 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx gOCFFA"
          data-blade-component="base-box"
        >
          <svg
            aria-hidden="true"
            class="Svgweb__StyledSvg-vcmjs8-0"
            data-blade-component="icon"
            fill="none"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
              data-blade-component="svg-path"
              fill="hsla(216, 27%, 36%, 1)"
            />
            <path
              d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
              data-blade-component="svg-path"
              fill="hsla(216, 27%, 36%, 1)"
            />
            <path
              clip-rule="evenodd"
              d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
              data-blade-component="svg-path"
              fill="hsla(216, 27%, 36%, 1)"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <p
          class="StyledBaseText-dVBfTO fuxoMy"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render Badge with bold font 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO eIOpN"
          data-blade-component="text"
        >
          LABEL
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render Badge with default props 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO fuxoMy"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render high contrast blue variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 hBRPnJ bhXUJg"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO eFCkkS"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render high contrast information variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 bpAnDr fnJRya"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO eFCkkS"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render high contrast negative variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 iRwYNk doEbud"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO eFCkkS"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render high contrast neutral variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 bisMLt kihkXo"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO eFCkkS"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render high contrast notice variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 GENOx dWmuUA"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO eFCkkS"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render high contrast positive variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cbzpVp JUizk"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO eFCkkS"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render large size Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx iRrOid"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO fuxoMy"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render low contrast blue variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 hLGNrn dzMQGe"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO bPLORF"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render low contrast information variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 bWpuVx hzlpBk"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO iHoEDf"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render low contrast negative variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 Kcrj gqXJpm"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO vmbSA"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render low contrast neutral variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO fuxoMy"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render low contrast notice variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 dGcjMZ jquvLA"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO guYcJ"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render low contrast positive variant Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 dLUnUf iPenii"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cunbeN"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render medium size Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO fuxoMy"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Badge /> should render small size Badge 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="badge"
  >
    <div
      class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx fRlyzV"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO dLineJ"
          data-blade-component="text"
        >
          Label
        </p>
      </div>
    </div>
  </div>
</div>
`;
